[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbincti-toolbox"
version = "1.0.0"
license = { file = "LICENSE.txt" }
authors = [{name="Shou-Fang Wu", email="shoufang.w@arbin.com" },]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

dependencies = [
    "pythonnet",
]

[project.optional-dependencies]
dev = [
    "build",
    "unittest",
]

[tool.setuptools]
packages = ["arbincti-toolbox"]
include-package-data = true
exclude-package-data = {"*" = ["arbincti.test"]}

[tool.setuptools.package_data]
your_package = ["bin/ArbinCTI.dll"]