[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctitoolbox"
version = "0.2.3"
license = { file = "LICENSE.txt" }
authors = [{name="Shou-Fang Wu", email="shoufang.w@arbin.com" },]
description = "A toolbox that provides a smoother and more Pythonic programming experience for users who want to use ArbinCTI in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

dependencies = [
    "pythonnet",
]

[project.optional-dependencies]
dev = [
    "build",
    "unittest",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ctitoolbox*"]
exclude = ["ctitoolbox.test*"]


[tool.setuptools.package-data]
ctitoolbox = ["bin/ArbinCTI.dll"]